Z-Index Correction

--- a/style.css
+++ b/style.css
@@ -71,10 +71,11 @@ section.start{
     display: flex;
     flex-direction: column;
     opacity: 0;
+    z-index: -11;
     transition: all 1s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 
     /* !===== FOR DEBUGGING =====! */
-    bottom: 70px;
+    /* bottom: 70px; */
 }
 .start h3{
     padding-left: 13px;
